# rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXPLICATION_PROJET.txt  README.md  app.py  chainlit.md  config.py  confluence.md  ingesting.py  pyproject.toml  requirements.deploy.txt  requirements.txt  retrieval_generation.py  startup.sh
.chainlit/: config.toml
.github/workflows/: deploy.yml
assets/: Consignes pour le Projet.txt  dictators.txt  related_topics.txt
assets/failed/: _failed.txt
assets/openalex/: papers_batch_1.txt  papers_batch_2.txt  papers_batch_3.txt  papers_batch_4.txt  papers_batch_5.txt
assets/wikipedia/: Abd_al-Karim_Qasim.txt  Abdel_Fattah_al-Burhan.txt  Abdel_Fattah_el-Sisi.txt  Abdelaziz_Bouteflika.txt  Abdou_Diouf.txt  Abdrabbuh_Mansour_Hadi.txt  Abdul-Karim_Al-Iryani.txt  Abdul_Fattah_Ismail.txt  Abdul_Razak_Hussein.txt  Abdul_Salam_Arif.txt  Abdul_Zahir.txt  Abdullah_Ahmad_Badawi.txt  Abdullah_I_of_Jordan.txt  Abdullah_al-Sallal.txt  Abdullah_bin_Abdulaziz_Al_Saud.txt  Abdullah_of_Saudi_Arabia.txt  Abdus_Sattar_(president).txt  Absolutisme.txt  Adam_Gierek.txt  Adolf_Hitler.txt  Agostinho_Neto.txt  Ahmad_Mansour_Al-Ahmad_Al-Sabah.txt  (+677 more)
assets_old/: AE02-sceance-4-v6.txt  LM_NoeGodin-SKF-Magnetic-Mechatronics.txt
core/: generate.py  ingestion.py  retrieval.py  retrieval_strategies.py  retrieve.py  sources.py
data/: dictators.txt  related_topics.txt
public/: custom.css  welcome.js
scripts/: import_reign_dataset.py
utils/: fusion.py  guard.py  logger.py  pdf_to_txt.py  project_filter.py  rerank.py  timer.py
