[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.2",
    "langchain-core==1.4.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai==1.2.2",
    "langchain-text-splitters==1.1.2",
    "python-dotenv==1.2.2",
    "rank-bm25==0.2.2",
    "requests==2.34.2",
    "sentence-transformers>=5.5.1",
    "chainlit>=2.0",
    "wikipedia-api>=0.15.0",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
]
