[project]
name = "rag"
version = "2.0.3"
description = "RAG sur les dictateurs et régimes autoritaires"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-qdrant>=0.2.0",
    "langchain-community==0.4.2",
    "langchain-core==1.4.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai==1.2.2",
    "langchain-text-splitters==1.1.2",
    "python-dotenv==1.2.2",
    "rank-bm25==0.2.2",
    "requests==2.34.2",
    "sentence-transformers>=5.5.1",
    "chainlit>=2.0",
    "wikipedia-api>=0.15.0",
    "polars>=1.41.1",
    "chonkie[semantic]>=1.6.7",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
]
